@@ -1,18 +1,5 @@
 package org.asamk.signal.manager.storage.sessions;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
 import org.asamk.signal.manager.api.Pair;
 import org.asamk.signal.manager.helper.RecipientAddressResolver;
 import org.asamk.signal.manager.storage.recipients.RecipientId;
@@ -22,14 +9,27 @@ import org.signal.libsignal.protocol.state.SessionRecord;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class LegacySessionStore {
 
     private final static Logger logger = LoggerFactory.getLogger(LegacySessionStore.class);
 
-    public static void migrate(final File sessionsPath, final RecipientResolver resolver,
-            final RecipientAddressResolver addressResolver, final SessionStore sessionStore) {
+    public static void migrate(
+            final File sessionsPath,
+            final RecipientResolver resolver,
+            final RecipientAddressResolver addressResolver,
+            final SessionStore sessionStore
+    ) {
         final var keys = getKeysLocked(sessionsPath, resolver);
         final var sessions = keys.stream().map(key -> {
             final var record = loadSessionLocked(key, sessionsPath);
@@ -37,8 +37,8 @@ public class LegacySessionStore {
             if (record == null || serviceId.isEmpty()) {
                 return null;
             }
-            return new Pair<>(new SessionStore.Key(serviceId.get(), key.deviceId), record);
-        }).filter(Objects::nonNull).collect(Collectors.toList());
+            return new Pair<>(new SessionStore.Key(serviceId.get(), key.deviceId()), record);
+        }).filter(Objects::nonNull).toList();
         sessionStore.addLegacySessions(sessions);
         deleteAllSessions(sessionsPath);
     }
@@ -73,16 +73,19 @@ public class LegacySessionStore {
 
     static final Pattern sessionFileNamePattern = Pattern.compile("(\\d+)_(\\d+)");
 
-    @SuppressWarnings("null")
     private static List<Key> parseFileNames(final File[] files, final RecipientResolver resolver) {
-        return Arrays.stream(files).map(f -> sessionFileNamePattern.matcher(f.getName())).filter(Matcher::matches)
+        return Arrays.stream(files)
+                .map(f -> sessionFileNamePattern.matcher(f.getName()))
+                .filter(Matcher::matches)
                 .map(matcher -> {
                     final var recipientId = resolver.resolveRecipient(Long.parseLong(matcher.group(1)));
                     if (recipientId == null) {
-                        return Optional.<Key> empty();
+                        return null;
                     }
-                    return Optional.of(new Key(recipientId, Integer.parseInt(matcher.group(2))));
-                }).map(Optional::get).filter(Objects::nonNull).collect(Collectors.toList());
+                    return new Key(recipientId, Integer.parseInt(matcher.group(2)));
+                })
+                .filter(Objects::nonNull)
+                .toList();
     }
 
     private static File getSessionFile(Key key, final File sessionsPath) {
@@ -91,7 +94,7 @@ public class LegacySessionStore {
         } catch (IOException e) {
             throw new AssertionError("Failed to create sessions path", e);
         }
-        return new File(sessionsPath, key.recipientId.id() + "_" + key.deviceId);
+        return new File(sessionsPath, key.recipientId().id() + "_" + key.deviceId());
     }
 
     private static SessionRecord loadSessionLocked(final Key key, final File sessionsPath) {
@@ -107,23 +110,5 @@ public class LegacySessionStore {
         }
     }
 
-    static class Key {
-        private final RecipientId recipientId;
-        private final int deviceId;
-
-        public Key(@JsonProperty("recipientId") RecipientId recipientId, @JsonProperty("deviceId") int deviceId) {
-            super();
-            this.recipientId = recipientId;
-            this.deviceId = deviceId;
-        }
-
-        public RecipientId recipientId() {
-            return recipientId;
-        }
-
-        public int deviceId() {
-            return deviceId;
-        }
-
-    }
+    record Key(RecipientId recipientId, int deviceId) {}
 }
